[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-catalyst"
version = "0.1.0"
description = "Generate a project skeleton from a product brief."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
